# iced-test

./: Cargo.toml
src/: bevy_component.rs  blit.wgsl  lib.rs  main.rs
