[package]
name = "ice-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["bevy_winit"] }
iced = { git="https://github.com/iced-rs/iced.git", branch="wgpu-0.20", features=["debug", "lazy", "system", "advanced"] }
wgpu = "0.20"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

